--- a/BlazorWeb/Pages/User/User.razor
+++ b/BlazorWeb/Pages/User/User.razor
@@ -11,5 +11,5 @@
     public string? UsernameQuery { get; set; } = null;
     [Parameter]
     [SupplyParameterFromQuery(Name = "sort")]
-    public string Sort { get; set; } = "";
+    public string Sort { get; set; } = "-_id";
 }
