--- a/BlazorWeb/Pages/_Layout.cshtml
+++ b/BlazorWeb/Pages/_Layout.cshtml
@@ -14,6 +14,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css">
+
+    <!-- Blazorise -->
+
+
     <component type="typeof(HeadOutlet)" render-mode="Server" />
 </head>
 <body>
@@ -32,5 +36,9 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
+    <!-- Blazorise -->
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
 </body>
 </html>
