--- a/BlazorWeb/Shared/NavMenu.razor
+++ b/BlazorWeb/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon=@Icons.Filled.BarChart>统计</MudNavLink>
     <MudNavGroup Title="评论" Expanded="true" Icon=@Icons.Filled.ModeComment>
         <MudNavLink Href="/reply?sort=-time" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.Comment>评论</MudNavLink>
-        <MudNavLink Href="/reply-line-chart" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.StackedLineChart>统计</MudNavLink>
+        <MudNavLink Href="/reply-statistics" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.StackedLineChart>统计</MudNavLink>
     </MudNavGroup>
     <MudNavLink Href="/dynamic?sort=-time" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.Article>动态</MudNavLink>
     <MudNavLink Href="/user" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.SupervisedUserCircle>用户</MudNavLink>
