--- a/BlazorWeb/_Imports.razor
+++ b/BlazorWeb/_Imports.razor
@@ -18,5 +18,6 @@
 @using BlazorWeb.Pages.Dynamic
 @using BlazorWeb.Pages.User
 @using BlazorWeb.Pages.Reply
+@using BlazorWeb.Pages.Statistics
 @using BlazorWeb.Models.Configurations
 @using BlazorWeb.Repositories
