--- a/BlazorWeb/Shared/NavMenu.razor
+++ b/BlazorWeb/Shared/NavMenu.razor
@@ -3,4 +3,5 @@
     <MudNavLink Href="/reply?sort=-time" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.Comment>评论</MudNavLink>
     <MudNavLink Href="/dynamic?sort=-time" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.Article>动态</MudNavLink>
     <MudNavLink Href="/user?sort=-_id" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.SupervisedUserCircle>用户</MudNavLink>
+    <MudNavLink Href="/file" Match="NavLinkMatch.Prefix" Icon=@Icons.Filled.FileDownload>文件</MudNavLink>
 </MudNavMenu>
