--- a/BlazorWeb/_Imports.razor
+++ b/BlazorWeb/_Imports.razor
@@ -20,4 +20,5 @@
 @using BlazorWeb.Pages.Reply
 @using BlazorWeb.Pages.Statistics
 @using BlazorWeb.Models.Configurations
+@using BlazorWeb.Models.Web
 @using BlazorWeb.Repositories
