--- a/BlazorWeb/Pages/_Layout.cshtml
+++ b/BlazorWeb/Pages/_Layout.cshtml
@@ -36,9 +36,25 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
-    <!-- Blazorise -->
-   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    <script>
+        async function downloadFileFromStream(fileName, contentStreamReference) {
+          const arrayBuffer = await contentStreamReference.arrayBuffer();
+          const blob = new Blob([arrayBuffer]);
+          const url = URL.createObjectURL(blob);
+
+          triggerFileDownload(fileName, url);
+
+          URL.revokeObjectURL(url);
+        }
+
+        function triggerFileDownload(fileName, url) {
+          const anchorElement = document.createElement('a');
+          anchorElement.href = url;
+          anchorElement.download = fileName ?? '';
+          anchorElement.click();
+          anchorElement.remove();
+        }
+    </script>
 </body>
 </html>
