--- a/BlazorWeb/Shared/MainLayout.razor
+++ b/BlazorWeb/Shared/MainLayout.razor
@@ -6,9 +6,9 @@
     [CascadingParameter]
     protected Task<AuthenticationState> AuthState { get; set; } = null!;
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
-        await webUserService.Init(AuthState.Result.User.Identity?.Name);
+        webUserService.Init(AuthState.Result.User.Identity?.Name);
         if (webUserService.IsBanned)
         {
             nav.NavigateTo("MicrosoftIdentity/Account/SignOut", forceLoad: true);
