--- a/BlazorWeb/Shared/GeneralDialog.razor
+++ b/BlazorWeb/Shared/GeneralDialog.razor
@@ -5,9 +5,9 @@
         {
             <MudText Typo=@Typo.h6>@Content</MudText>
         }
-        @if (InputType != null)
+        @if (InputContent != null || InputValue != null)
         {
-            <MudInput T=@InputType Value=@(InputValue == null ? default : (InputType)InputValue) Placeholder=@(InputContent ?? string.Empty)  />
+            <MudInput T=string Value=@(InputValue == null ? default : InputValue) Placeholder=@(InputContent ?? string.Empty) @ref=@inputField />
         }
     </DialogContent>
     <DialogActions>
@@ -22,38 +22,3 @@
     </DialogActions>
 </MudDialog>
 
-@code {
-    [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
-
-    [Parameter]
-    public string? Content { get; set; } = null;
-
-    [Parameter]
-    public Type? InputType { get; set; } = null;
-
-    [Parameter]
-    public string? InputContent { get; set; } = null;
-
-    [Parameter]
-    public object? InputValue { get; set; } = null;
-
-    [Parameter]
-    public string? CancelText { get; set; } = null;
-
-    [Parameter]
-    public string? SubmitText { get; set; } = null;
-
-    [Parameter]
-    public EventCallback<object?> SubmitCallback { get; set; }
-
-    private async Task OnSubmitClick(MouseEventArgs e)
-    {
-        if (SubmitCallback.HasDelegate)
-        {
-            await SubmitCallback.InvokeAsync(InputValue);
-        }
-        MudDialog.Close(DialogResult.Ok(true));
-    }
-
-    private void OnCancelClick() => MudDialog.Cancel();
-}
