Fix Pie Chart close #2

--- a/BlazorWeb/Pages/Statistics/ReplyByUpPieChart.razor
+++ b/BlazorWeb/Pages/Statistics/ReplyByUpPieChart.razor
@@ -19,6 +19,6 @@
         </MudItem>
     }
     <MudItem xs="12">
-        <PieChartV1 Title=@Title DataSet=@replyByUpStatistics></PieChartV1>
+        <PieChartV1 Title=@Title DataSet=@replyByUpStatistics @ref=@pieChart></PieChartV1>
     </MudItem>
 </MudGrid>
