--- a/BlazorWeb/_Imports.razor
+++ b/BlazorWeb/_Imports.razor
@@ -11,6 +11,7 @@
 @using MongoDB.Driver
 @using Mzr.Share.Models.Bilibili
 @using Mzr.Share.Interfaces.Bilibili
+@using Mzr.Share.Repositories.Bilibili
 @using BlazorWeb
 @using BlazorWeb.Shared
 @using BlazorWeb.Data
