--- a/BlazorWeb/Pages/Dynamic/DynamicPagination.razor
+++ b/BlazorWeb/Pages/Dynamic/DynamicPagination.razor
@@ -67,5 +67,5 @@
 </MudTable>
 
 <MudScrollToTop>
-    <MudFab Color="Color.Tertiary" Icon="@Icons.Filled.ArrowCircleUp" />
+    <MudFab Color="Color.Tertiary" StartIcon="@Icons.Filled.ArrowCircleUp" />
 </MudScrollToTop>
