--- a/BlazorWeb/Pages/Reply/ReplyPagination.razor
+++ b/BlazorWeb/Pages/Reply/ReplyPagination.razor
@@ -80,5 +80,5 @@
 </MudTable>
 
 <MudScrollToTop>
-    <MudFab Color="Color.Tertiary" Icon="@Icons.Filled.ArrowCircleUp" />
+    <MudFab Color="Color.Tertiary" StartIcon="@Icons.Filled.ArrowCircleUp" />
 </MudScrollToTop>
