--- a/BlazorWeb/Pages/User/UserPagination.razor
+++ b/BlazorWeb/Pages/User/UserPagination.razor
@@ -79,7 +79,7 @@
 </MudTable>
 
 <MudScrollToTop>
-    <MudFab Color="Color.Tertiary" Icon="@Icons.Filled.ArrowCircleUp" />
+    <MudFab Color="Color.Tertiary" StartIcon="@Icons.Filled.ArrowCircleUp" />
 </MudScrollToTop>
 
 @code {
